--- a/index.html
+++ b/index.html
@@ -1,11 +1,202 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
 <head>
+    <meta charset="utf-8">
+    <!--	[[1]]	# App title #		-->
+    <title>uknit for Windows Phone</title>
+    <meta name="description" content="uknit">
+    <meta name="author" content="Nick Harewood: www.space-scape.com/wp7appsite/">
+    <!--[if lt IE 9]>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="stylesheets/base.min.css">
+    <link rel="stylesheet" href="stylesheets/skeleton.css">
+    <link rel="stylesheet" href="stylesheets/layout.css">
+    <style type="text/css">
+        /* 	[[3]] #Windows Phone App Website Branding Styles */
 
+        /* Text and Background colour */
+        body
+        {
+            color: #000;
+            background-color: #BDBDBD;
+        }
+
+        /* Header Colours */
+        h1, h2, h3, h4, h5, h6
+        {
+            color: #333;
+        }
+
+        /* Link colour */
+        a, a:visited
+        {
+            color: #666;
+        }
+
+        /* Logo */
+        #header #logo h1
+        {
+            width: 110px;
+            height: 110px;
+            background: transparent url(images/branding/LargeMobileAppTile.png) no-repeat;
+        }
+
+        /* Strapline colour */
+        #header #strapline p
+        {
+            color: #000;
+        }
+
+        /* App Feature List - define custom feature icons here -  */
+        ul.featurelist li.BulletImage
+        {
+            background-image: url(images/listcircle.png);
+        }
+
+        /* User Review Quote */
+        blockquote.user_quote p
+        {
+            color: #666;
+        }
+    </style>
+    <link rel="shortcut icon" href="images/branding/favicon.ico">
 </head>
-
 <body>
-Test page for uknit.
-</body>
+    <div id="maincontainer" class="container">
+        <div class="sixteen columns" id="header">
+            <a href="http://www.windowsphone.com/en-US/apps/b865ae07-1a8f-4bc4-96d2-884886d6b7e8">
+                <div id="logo" class="four columns alpha">
+                <!--	[[4]]	# App title #		-->
+                <h1>uknit</h1>
+                </div>
+            </a>
+            <div id="strapline" class="six columns omega offset-by-six">
+                <!--	[[5]]	# App strapline #		-->
+                <p>
+                    <strong>uknit</strong> for Windows Phone<br />
+                    <span style="font-style: italic; font-size: smaller">Your knitting toolkit on the go!</span>
+                    <br />
+                </p>
+            </div>
+        </div>
+        <br class="clear" />
+        <div class="sixteen columns" id="contentcontainer">
+            <div class="four columns alpha">
+                <h2>Latest News</h2>
+                <ul class="features">
+                    <li class=""><i>[2012-05-24]</i>: The <strong>next version 1.2 has been submitted to
+                        the Marketplace</strong> and will bring Live Tile support! Now pin your row counters
+                        as a tile for quick access. Check the Marketplace for updates real soon!</li>
+                </ul>
+                <!--	# Twitter Feed  #		-->
+                <!--<div class="tweet"></div>-->
+                <!--	[[6]]	# Twitter Follow Button : Enter your twitter link below #		-->
+                <!--<a href="https://twitter.com/wp7appsite" class="twitter-follow-button" data-show-count="false">Follow WP7appSite</a>-->
+            </div>
+            <div id="phonescreens" class="six columns">
+                <div id="slider">
+                    <a href="http://www.windowsphone.com/en-US/apps/b865ae07-1a8f-4bc4-96d2-884886d6b7e8">
+                    <!--	[[7]]	# App Screenshots - Replace items in this list with your own 240x400px Images #		-->
+                    <ul>
+                        <li>
+                            <img src="images/screenshots/screenshot0.jpg" alt="App Screenshot" /></li>
+                        <li>
+                            <img src="images/screenshots/screenshot1.jpg" alt="App Screenshot" /></li>
+                        <li>
+                            <img src="images/screenshots/screenshot2.jpg" alt="App Screenshot" /></li>
+                        <li>
+                            <img src="images/screenshots/screenshot3.jpg" alt="App Screenshot" /></li>
+                        <li>
+                            <img src="images/screenshots/screenshot4.jpg" alt="App Screenshot" /></li>
+                    </ul>
+                        </a>
+                </div>
+                <!--	[[8]]	# App Marketplace Link - Find your app on the marketplace and insert the URL below#		-->
+                <p class="downloadlink">
+                    <a href="http://www.windowsphone.com/en-US/apps/b865ae07-1a8f-4bc4-96d2-884886d6b7e8">
+                        Download for Windows Phone</a>
+                </p>
+            </div>
+            <div id="features" class="six columns omega">
+                <h2>Features</h2>
+                <!--	[[9]]	# App Feature List #		-->
+                <ul class="featurelist">
+                    <li class="BulletImage">Free trial available! (full functionality but only one row counter)
+                    </li>
+                    <li class="BulletImage">Simple and clean design</li>
+                    <li class="BulletImage">Customizable row counters</li>
+                    <li class="BulletImage">Accurate ruler (inches and centimeters)</li>
+                    <li class="BulletImage">Gauge and swatch calcuators</li>
+                    <li class="BulletImage">Unit conversion (yards to meters)</li>
+                    <li class="BulletImage">Fully open source on <a href="https://github.com/nshenoy/uknit">
+                        github</a>!</li>
+                </ul>
+                <!--	[[10]]	# User Reviews & Quotes #		-->
+                <!--				<blockquote class="user_quote">
+					<p>The best (and only) Windows Phone 7 App site template I've ever used!</p>
+					<cite>Nick Harewood, App Designer</cite>
+				</blockquote>
+-->
+            </div>
+        </div>
+    </div>
+    <!--	# Footer #		-->
+    <div class="container" id="footer">
+        <p>
+            <a href="http://www.windowsphone.com/en-US/apps/b865ae07-1a8f-4bc4-96d2-884886d6b7e8">
+                <strong>uknit</strong> for Windows Phone</a> by <a href="http://repne.wordpress.com/">
+                    Nithin Shenoy</a>&nbsp;<a href="https://twitter.com/nitdoggx" class="twitter-follow-button" data-show-count="false">Follow @nitdoggx</a>
+        </p>
+        <p>
+            For support send <a href="mailto:uknit@hotmail.com">mailto:uknit@hotmail.com</a>
+        </p>
+    </div>
+    <!-- Load all the JS -->
+    <script type="text/javascript" src="javascripts/jsLoader.js"></script>
+    <script src="//platform.twitter.com/widgets.js" type="text/javascript"></script>
+    <script type="text/javascript">
 
+        //	[[2]]	# Twitter Feed Options - see http://tweet.seaofclouds.com/ for details #
+        //jQuery(function($){
+        //	$(".tweet").tweet({
+        //		username: "nitdoggx",
+        //		join_text: "auto",
+        //		count: 3,
+        //		auto_join_text_default: "We said:",
+        //		auto_join_text_ed: "We",
+        //		auto_join_text_ing: "We were",
+        //		auto_join_text_reply: "",
+        //		auto_join_text_url: "",
+        //		loading_text: "loading tweets..."
+        //	});
+        //});
+
+    </script>
+    <script type="text/javascript">
+        //	[[11]]	# UserVoice Widget code location
+        var uvOptions = {};
+        (function () {
+            var uv = document.createElement('script'); uv.type = 'text/javascript'; uv.async = true;
+            uv.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'widget.uservoice.com/f1MIiAmmoxAKdvQNrFWnaw.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(uv, s);
+        })();
+
+        //	[[12]]	# Screenshot Slider options #
+        $(document).ready(function () {
+            $("#slider").easySlider({
+                auto: true,
+                continuous: true,
+                pause: 5000,
+                controlsShow: false
+            });
+        });
+    </script>
+</body>
 </html>
