Updating site with 1.2.1 info

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <div class="four columns alpha">
                 <h2>Latest News</h2>
                 <ul class="features">
-                    <li class=""><i>[2012-05-24]</i>: The <strong>next version 1.2 has been submitted to
-                        the Marketplace</strong> and will bring Live Tile support! Now pin your row counters
-                        as a tile for quick access. Check the Marketplace for updates real soon!</li>
+                    <li class=""><i>[2012-06-13]</i>: The <strong>next version 1.2.1 has been submitted to
+                        the Marketplace</strong>. This fixes a crashing bug related the new Live Tile support. 
+			Check the Marketplace for updates real soon!</li>
                 </ul>
                 <!--	# Twitter Feed  #		-->
                 <!--<div class="tweet"></div>-->
