--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <div class="four columns alpha">
                 <h2>Latest News</h2>
                 <ul class="features">
-                    <li class=""><i>[2012-06-13]</i>: The <strong>next version 1.3 has been submitted to
-                        the Marketplace</strong>. This fixes a crashing bug related the new Live Tile support. 
+                    <li class=""><i>[2012-06-18]</i>: Version 1.3 is <strong>now available in 
+                        the <a href="http://www.windowsphone.com/en-US/apps/b865ae07-1a8f-4bc4-96d2-884886d6b7e8">Marketplace</a></strong>. This fixes a crashing bug related the new Live Tile support. 
 			Check the Marketplace for updates real soon!</li>
                 </ul>
                 <!--	# Twitter Feed  #		-->
